fix overflow

--- a/style.scss
+++ b/style.scss
@@ -234,6 +234,10 @@ code {
     } 
 }
 
+.long-bg {
+  overflow: hidden;
+}
+
 // ================= PAGE NAVIGATOR =======================
 
 // add space for the bootstrap navbar
